<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ca.campbell.celebritydb.AboutActivity" >

    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/about"/>
    <item
        android:id="@+id/search"
        android:orderInCategory="125"
        android:showAsAction="ifRoom"
        android:title="@string/search"/>
    <item
        android:id="@+id/byname"
        android:orderInCategory="150"
        android:showAsAction="ifRoom"
        android:visible="false"
        android:title="@string/byname"/>
    <item
        android:id="@+id/byyear"
        android:orderInCategory="175"
        android:showAsAction="ifRoom"
        android:visible="false"
        android:title="@string/byyear"/>

</menu>