<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.campbell.celebritydb.AboutActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="#FF00FFFF"
        android:gravity="fill_horizontal"
        android:paddingBottom="15dp"
        android:text="@string/msg1"
        android:textColor="@color/black"
        android:textSize="@dimen/about_font" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:text="@string/msg2"
        android:textSize="@dimen/about_font" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF00FFFF"
        android:gravity="center_vertical|center_horizontal"
        android:paddingBottom="15dp"
        android:text="@string/msg3"
        android:textColor="@color/black"
        android:textSize="@dimen/about_font" />

</LinearLayout>